deployment.yaml
#This file configures the hello-world app which serves public web traffic.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gameserver-gke
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gameserver
  template:
    metadata:
      labels:
        app: gameserver
    spec:
      containers:
      - name: gameserver-app
        # Replace $GCLOUD_PROJECT with your project ID
        image: gcr.io/buselproject/gameserver-gke:latest
        # This app listens on port 8080 for web traffic by default.
        ports:
        - containerPort: 8080
