service.yaml

# The service provides a load-balancing proxy over the hello-app
# pods. By specifying the type as a 'LoadBalancer', Kubernetes Engine will
# create an external HTTP load balancer.
apiVersion: v1
kind: Service
metadata:
  name: gameserver
spec:
  type: LoadBalancer
  selector:
    app: gameserver
  ports:
  - port: 80
    targetPort: 8080
