gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gameserver
spec:
  hosts:
  - "*"
  gateways:
  - gateway
  http:
  - match: 
    - uri:
        prefix: /
    route:
    - destination:
        host: gameserver-gke
        port:
          number: 8080
